@@ -15,25 +15,31 @@
     <module>chap04</module>
     <module>chap05</module>
     <module>chap06</module>
+    <module>chap07</module>
   </modules>
 
   <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
 
-    <kotlin.version>1.4.21</kotlin.version>
+    <kotlin.version>1.7.20</kotlin.version>
+    <kotlin.coroutines.version>1.5.4</kotlin.coroutines.version>
+    <jackson.version>2.14.0-rc2</jackson.version>
 
-    <vertx.version>4.0.0</vertx.version>
-    <junit-jupiter.version>5.4.0</junit-jupiter.version>
-    <assertj-core.version>3.11.1</assertj-core.version>
-    <logback.version>1.2.3</logback.version>
+    <vertx.version>4.3.4</vertx.version>
+    <junit-jupiter.version>5.9.0</junit-jupiter.version>
+    <assertj-core.version>3.23.1</assertj-core.version>
+    <logback.version>1.4.4</logback.version>
 
-    <kotlin.compiler.languageVersion>1.4</kotlin.compiler.languageVersion>
-    <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+
+    <kotlin.compiler.languageVersion>1.7</kotlin.compiler.languageVersion>
+    <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
   </properties>
 
   <dependencyManagement>
@@ -81,6 +87,17 @@
         <optional>true</optional>
       </dependency>
 
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -121,7 +138,16 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-tcp-eventbus-bridge</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-lang-kotlin</artifactId>
+      <version>${vertx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-lang-kotlin-coroutines</artifactId>
+      <version>${vertx.version}</version>
+    </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-junit5</artifactId>
@@ -146,6 +172,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -161,8 +195,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>11</source>
+          <target>11</target>
           <verbose>true</verbose>
         </configuration>
         <executions>
@@ -192,7 +226,45 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin.version}</version>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <useManifestOnlyJar>true</useManifestOnlyJar>
+          <useFile>true</useFile>
+          <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          <runOrder>alphabetical</runOrder>
+          <argLine>@{argLine}
+            --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+            --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.base/java.lang.module=ALL-UNNAMED
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+            --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+            --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+            --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+            --add-opens java.base/jdk.internal.module=ALL-UNNAMED
+            -Dio.netty.tryReflectionSetAccessible=true
+            --illegal-access=permit
+            -Xshare:off
+            -Xmx1024m
+          </argLine>
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <argLine>--illegal-access=permit</argLine>
+        </configuration>
       </plugin>
     </plugins>
 
@@ -229,6 +301,12 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
